--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: rgba(0, 0, 255, 0.5);
+  --ifm-color-primary: rgba(0, 0, 0, 0.0001);
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -19,7 +19,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: hsl(0, 0%, 66.3%);
+  --ifm-color-primary: rgba(0, 0, 0, 0);
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -27,4 +27,13 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: #f5f5f5;
+  background-image: url('/static/img/themeConfig.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
