--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,4 +37,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  color: rgba(255, 255, 255, 1);
+  font-weight: 700;
+
 }
