--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,3 +41,9 @@ body {
   font-weight: 700;
 
 }
+a {
+  color: rgba(0, 0, 0, 0.9); ; /* 你想要的颜色 */
+}
+a:hover {
+  color: #007bff; /* 鼠标悬停时的字体颜色 */
+}
